Update acd2.json (#2215)
* Update acd2.json

* update