@@ -57,11 +57,11 @@ public class DiscardACRandom extends ACCardsSubcommandData {
         StringBuilder sb = new StringBuilder();
         sb.append("Player: ").append(player.getUserName()).append(" - ");
         sb.append("Discarded Action Card:").append("\n");
-        while (count > 0 && player.getActionCards().size() > 0) {
+        while (count > 0 && !player.getActionCards().isEmpty()) {
             Map<String, Integer> actionCards_ = player.getActionCards();
             List<String> cards_ = new ArrayList<>(actionCards_.keySet());
             Collections.shuffle(cards_);
-            String acID = cards_.get(0);
+            String acID = cards_.getFirst();
             boolean removed = game.discardActionCard(player.getUserID(), actionCards_.get(acID));
             if (!removed) {
                 MessageHelper.sendMessageToChannel(event.getMessageChannel(), "No such Action Cards found, please retry");
