@@ -2,12 +2,16 @@ package ti4.draft.items;
 
 import java.util.ArrayList;
 import java.util.List;
+
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import ti4.draft.DraftItem;
 import ti4.generator.Mapper;
 import ti4.generator.TileHelper;
 import ti4.helpers.Emojis;
-import ti4.model.*;
+import ti4.model.DraftErrataModel;
+import ti4.model.FactionModel;
+import ti4.model.PlanetModel;
+import ti4.model.TileModel;
 
 public class HomeSystemDraftItem extends DraftItem {
     public HomeSystemDraftItem(String itemId) {
@@ -35,7 +39,7 @@ public class HomeSystemDraftItem extends DraftItem {
             sb.append(", ");
         }
 
-        buildPlanetString(Mapper.getPlanet(planetIds.get(planetIds.size() - 1)), sb);
+        buildPlanetString(Mapper.getPlanet(planetIds.getLast()), sb);
 
         return sb.toString();
     }
