@@ -1,6 +1,7 @@
 package ti4.helpers.async;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -13,7 +14,6 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.apache.commons.lang3.StringUtils;
-
 import ti4.generator.TileHelper;
 import ti4.model.Source.ComponentSource;
 import ti4.model.TileModel;
@@ -66,24 +66,24 @@ public class JimboConst {
         candidates.addAll(List.of("output", "outside", "oval", "ovation", "overgrowth", "overhaul", "override", "overseer", "overture", "owl", "oxymoron", "oxytocin", "oyster", "ozone", "omega", "Ogdun", "Oy-Oy-Oy"));
         candidates.addAll(List.of("o-word", "o-backronym"));
         Collections.shuffle(candidates);
-        return StringUtils.capitalize(candidates.get(0));
+        return StringUtils.capitalize(candidates.getFirst());
     }
 
     public static void setupTileStuff() {
         if (blueTiles != null) return;
 
         Function<TileModel, Integer> sourceOrder = t -> t.getSource().ordinal();
-        Comparator<TileModel> comp = Comparator.comparing(sourceOrder).thenComparing(tile -> tile.getAlias());
+        Comparator<TileModel> comp = Comparator.comparing(sourceOrder).thenComparing(TileModel::getAlias);
         // sort by source, then by alias
         List<TileModel> allTilesSorted = TileHelper.getAllTiles().values().stream().sorted(comp).toList();
 
         blueTiles = allTilesSorted.stream().filter(t -> "0b".equals(t.getAlias()) || "blue".equals(t.getTileBack())).toList();
         redTiles = allTilesSorted.stream().filter(t -> "0r".equals(t.getAlias()) || "red".equals(t.getTileBack())).toList();
         greenTiles = allTilesSorted.stream().filter(t -> "0g".equals(t.getAlias()) || "green".equals(t.getTileBack())).toList();
-        hyperlaneTiles = allTilesSorted.stream().filter(t -> t.getName() != null && t.getName().toLowerCase().equals("hyperlane")).toList();
+        hyperlaneTiles = allTilesSorted.stream().filter(t -> t.getName() != null && t.getName().equalsIgnoreCase("hyperlane")).toList();
         draftTiles = allTilesSorted.stream().filter(TileHelper::isDraftTile).toList();
         otherTiles = new ArrayList<>();
-        List<TileModel> ignore = List.of(blueTiles, redTiles, greenTiles, hyperlaneTiles, draftTiles).stream().flatMap(t -> t.stream()).toList();
+        List<TileModel> ignore = List.of(blueTiles, redTiles, greenTiles, hyperlaneTiles, draftTiles).stream().flatMap(Collection::stream).toList();
         allTilesSorted.stream().filter(t -> !ignore.contains(t))
             .filter(t -> t.getSource() == ComponentSource.fow)
             .forEach(otherTiles::add);
